--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -16,8 +16,8 @@
             <a href="#" class="logo"><img src="logo.png"></a>
             <nav>
                 <ul>
-                    <li><a href="starbucks\index.html" class="link">Home</a></li>
-                    <li><a href="starbucks\menu.html" class="link">Menu</a></li>
+                    <li><a href="#" class="link">Home</a></li>
+                    <li><a href="#" class="link">Menu</a></li>
                     <li><a href="#" class="link">About us</a></li>
                     <li><a href="#" class="link">Rewards</a></li>
                 </ul>
